--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
             <button onclick="showHelpModal()" style="cursor: pointer; background: rgba(255,255,255,0.2); border:none; color:white; padding:6px 12px; border-radius:4px; margin-right: 10px;">
                 <i class="fas fa-question-circle"></i> 帮助
             </button>
-            <button onclick="copyLink()" style="cursor: pointer; background: rgba(255,255,255,0.2); border:none; color:white; padding:6px 12px; border-radius:4px;">
+            <button onclick="copyLink()" title="复制链接邀请他人" style="cursor: pointer; background: rgba(255,255,255,0.2); border:none; color:white; padding:6px 12px; border-radius:4px;">
                 <i class="fas fa-share-alt"></i>
             </button>
             <button onclick="toggleTheme()" style="margin-left:10px; background:transparent; border:none; color:white; font-size:1.2rem; cursor:pointer;"><i class="fas fa-adjust"></i></button>
@@ -181,6 +181,7 @@
             <span class="modal-close" onclick="closeAllModals()">&times;</span>
             <h3><i class="fas fa-book"></i> 操作说明书</h3>
             <ul class="help-list">
+                <li><span class="key-tag" style="background:#e3f2fd; color:#1565c0; border-color:#1565c0;">多人协作</span> <b>复制链接</b> (点击右上角分享图标) 发送给好友。只要大家都在同一个房间 ID 下（看右下角），你画的每一笔，对方都能<b>实时看见</b>！</li>
                 <li><span class="key-tag">呼叫 DeepSeek</span> 现在的 AI 可以<b>自动画图</b>和<b>生成整棵思维导图</b>了！试试点击顶部按钮。</li>
                 <li><span class="key-tag">左键拖拽</span> <b>抓手模式</b>下，按住鼠标左键可自由拖动画布。</li>
                 <li><span class="key-tag">滚轮</span> 上下滚动鼠标滚轮可缩放画布。</li>
