--- a/index.html
+++ b/index.html
@@ -89,14 +89,15 @@
         /* 部署状态指示器 */
         .deploy-badge {
             position: fixed;
-            top: 10px;
-            right: 10px;
+            top: 60px;
+            right: 20px;
             background: rgba(0,0,0,0.7);
             color: white;
             padding: 4px 8px;
             border-radius: 4px;
             font-size: 0.7rem;
             z-index: 1000;
+            opacity: 0.8;    /* 添加透明度，不那么显眼 */
         }
     </style>
 </head>
